<resources>
    <string name="app_name">HelloWorld</string>
    <string name="hola_mundo">Hola mundo</string>
    <string name="algo">Algo</string>
    <string name="_1_text_view">1. Text View</string>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="_2_cambiar_color">2. Cambiar color</string>
    <string name="texto_color_material_indigo_500">Texto color material Indigo 500</string>
    <string name="_3_cambiar_tama_o">3. Cambiar tamaño</string>
    <string name="tama_o_14sp">Tamaño 14sp</string>
    <string name="tama_o_16sp">Tamaño 16sp</string>
    <string name="tama_o_20sp">Tamaño 20sp</string>
    <string name="tama_o_24sp">Tamaño 24sp</string>
    <string name="n_mero_1">Número 1</string>
    <string name="n_mero_2">Número 2</string>
    <string name="reset">Reset</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="saluda">Saluda</string>
</resources>